# mailwise-ai-email-automation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  FOUNDATION.md  LICENSE  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: ignite-version.json  quality-gate.json  settings.json
.claude-plugin/: plugin.json
.claude/agents/: Inquisidor.md  Lorekeeper.md  Sentinel.md  backend-worker.md  frontend-worker.md
.claude/hooks/: cerbero-scanner.py  code-quality-gate.py  lorekeeper-commit-gate.py  lorekeeper-session-end.py  lorekeeper-session-gate.py  validate-prompt.py
.claude/rules/: compound-engineering.md  debugging.md  documentation.md  testing.md
.claude/security/: trusted-publishers.txt  user-profile.json
.github/workflows/: quality.yml  security-review.yml
Preproyecto/: Plan_de_carrera.md
_workflow/guides/: Referencia-edicion-CLAUDE.md  agents-guide.md  skill-quality-checklist.md  workflow-guide.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/healthchecks/: scheduler-health.sh  worker-health.sh
docs/: AGENT-COORDINATION.md  CHANGELOG-DEV.md  DECISIONS.md  FOUNDATION.md  LESSONS-LEARNED.md  README.md  SCRATCHPAD.md  STATUS.md  adapter-guide.md  deployment.md  ignite-reference.md
docs/handoffs/: block-03-context.md  block-04-context.md  block-05-context.md  block-06-context.md  block-07-context.md  block-08-context.md  block-09-context.md  block-10-context.md  block-11-context.md  block-12-context.md  block-13-context.md  block-14-context.md  block-15-context.md  block-16-context.md  block-17-context.md  block-18-context.md  block-19-context.md  block-20-review-and-polish
docs/methodology/: agent-team.md  development-process.md  security-framework.md
docs/reviews/: ai-ml-expert-review.md  architecture-review.md  block-01-sentinel-review.md  block-02-auth-security-review.md  block-04-llm-adapter-review.md  cerbero-eval-playwright-mcp.md  cerbero-eval-shadcn-ui-mcp-server.md  cerbero-skill-eval-frontend-design-tailwindcss.md  cerbero-step2-mcp-scan.md  infra-devops-review.md  mcp-scan-cerbero-step1-review.md  phase-4-security-review.md
docs/specs/: block-00-scaffolding.md  block-01-models.md  block-02-auth.md  block-03-email-adapter.md  block-04-llm-adapter.md  block-05-channel-adapter.md  block-06-crm-adapter.md  block-07-ingestion.md  block-08-classification.md  block-09-routing.md  block-10-crm-sync.md  block-11-draft-generation.md  block-12-pipeline.md  block-13-api-core.md  block-14-api-config.md  block-15-frontend-shell.md  block-16-frontend-core.md  block-17-frontend-remaining.md  block-18-tests.md  block-19-deployment.md  spec-template.md
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/screenshots/: capture.mjs
frontend/scripts/: generate-types.ts
frontend/src/: App.tsx  main.tsx  router.tsx  test-setup.ts
scripts/: validate-docs.sh  validate-placeholders.sh
src/adapters/: redis_client.py
src/api/: deps.py  exception_handlers.py  main.py
src/core/: config.py  correlation.py  database.py  exceptions.py  logging.py  sanitizer.py  security.py
src/models/: __init__.py  base.py  category.py  classification.py  crm_sync.py  draft.py  email.py  feedback.py  few_shot.py  routing.py  system_log.py  user.py
src/scheduler/: jobs.py  (+2 more)
tests/: conftest.py  factories.py
(+237 files in other folders)
