[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailwise"
version = "0.1.0"
description = "Intelligent Email Classification and Routing System"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "structlog>=24.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "litellm>=1.40",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "slack-sdk>=3.27",
    "hubspot-api-client>=9.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "google.*",
    "googleapiclient.*",
    "hubspot.*",
    "litellm.*",
    "slack_sdk.*",
    "apscheduler.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
